--- a/requirements.txt
+++ b/requirements.txt
@@ -1,384 +1,29 @@
 gdown==5.2.0
-geemap==0.35.3
-geocoder==1.38.1
-geographiclib==2.0
 geopandas==1.0.1
-geopy==2.4.1
-gin-config==0.5.0
-gitdb==4.0.12
-GitPython==3.1.44
-glob2==0.7
 google==2.0.3
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.169.0
 google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-cloud-aiplatform==1.90.0
-google-cloud-bigquery==3.31.0
-google-cloud-bigquery-connection==1.18.2
-google-cloud-bigquery-storage==2.31.0
-google-cloud-bigtable==2.30.1
-google-cloud-core==2.4.3
-google-cloud-dataproc==5.18.1
-google-cloud-datastore==2.21.0
-google-cloud-firestore==2.20.2
-google-cloud-functions==1.20.3
-google-cloud-iam==2.19.0
-google-cloud-language==2.17.1
-google-cloud-pubsub==2.25.0
-google-cloud-resource-manager==1.14.2
-google-cloud-spanner==3.54.0
-google-cloud-storage==2.19.0
-google-cloud-translate==3.20.2
-google-crc32c==1.7.1
-google-genai==1.12.1
-google-generativeai==0.8.5
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-google-spark-connect==0.5.2
-googleapis-common-protos==1.70.0
-googledrivedownloader==1.1.0
-graphviz==0.20.3
-greenlet==3.2.1
 grpc-google-iam-v1==0.14.2
-grpc-interceptor==0.15.4
 grpcio==1.71.0
-grpcio-status==1.71.0
-grpclib==0.4.7
-gspread==6.2.0
-gspread-dataframe==4.0.0
-gym==0.25.2
-gym-notices==0.0.8
-gymnasium==1.1.1
-h11==0.16.0
-h2==4.2.0
-h5netcdf==1.6.1
-h5py==3.13.0
 hdbscan==0.8.40
-highspy==1.10.0
-holidays==0.71
-holoviews==1.20.2
-hpack==4.1.0
-html5lib==1.1
-httpcore==1.0.9
-httpimport==1.4.1
-httplib2==0.22.0
 httpx==0.28.1
-huggingface-hub==0.30.2
-humanize==4.12.2
-hyperframe==6.1.0
-hyperopt==0.2.7
-ibis-framework==9.5.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-imagesize==1.4.1
-imbalanced-learn==0.13.0
-immutabledict==4.2.1
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-imutils==0.5.4
-inflect==7.5.0
-iniconfig==2.1.0
-intel-cmplr-lib-ur==2025.1.0
-intel-openmp==2025.1.0
-ipyevents==2.0.2
-ipyfilechooser==0.6.0
-ipykernel==6.17.1
-ipyleaflet==0.19.2
 ipyparallel==8.8.0
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipython-sql==0.5.0
-ipytree==0.2.2
-ipywidgets==7.7.1
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jax==0.5.2
-jax-cuda12-pjrt==0.5.1
-jax-cuda12-plugin==0.5.1
-jaxlib==0.5.1
-jeepney==0.9.0
-jieba==0.42.1
-Jinja2==3.1.6
-jiter==0.9.0
 joblib==1.4.2
-jsonpatch==1.33
-jsonpickle==4.0.5
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter-client==6.1.12
 jupyter-console==6.1.0
-jupyter-leaflet==0.19.2
-jupyter-server==1.16.0
-jupyter_core==5.7.2
-jupyter_kernel_gateway @ git+https://github.com/googlecolab/kernel_gateway@b134e9945df25c2dcb98ade9129399be10788671
-jupyterlab_pygments==0.3.0
-jupyterlab_widgets==3.0.14
+keras==3.8.0
 kaggle==1.7.4.2
 kagglehub==0.3.12
-keras==3.8.0
-keras-hub==0.18.1
-keras-nlp==0.18.1
-keyring==25.6.0
-keyrings.google-artifactregistry-auth==1.1.2
-kiwisolver==1.4.8
-langchain==0.3.24
-langchain-core==0.3.56
-langchain-text-splitters==0.3.8
-langcodes==3.5.0
-langsmith==0.3.38
-language_data==1.3.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.4
-libclang==18.1.1
-libcugraph-cu12==25.2.0
-libcuml-cu12==25.2.1
-libcuvs-cu12==25.2.1
-libkvikio-cu12==25.2.1
-libraft-cu12==25.2.0
-librosa==0.11.0
-libucx-cu12==1.18.0.post1
-libucxx-cu12==0.42.0
-linkify-it-py==2.0.3
-llvmlite==0.43.0
-locket==1.0.0
-logical-unification==0.4.6
-lxml==5.4.0
-Mako==1.1.3
-marisa-trie==1.2.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
 matplotlib==3.10.0
-matplotlib-inline==0.1.7
-matplotlib-venn==1.1.2
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-miniKanren==1.0.3
-missingno==0.5.2
-mistune==3.1.3
-mizani==0.13.3
-mkl==2025.0.1
-ml-dtypes==0.4.1
-mlxtend==0.23.4
-more-itertools==10.7.0
 moviepy==1.0.3
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.4.3
-multipledispatch==1.0.0
-multitasking==0.0.11
-murmurhash==1.0.12
-music21==9.3.0
-namex==0.0.9
-narwhals==1.37.1
-natsort==8.4.0
-nbclassic==1.3.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-ndindex==1.9.2
-nest-asyncio==1.6.0
+mysqlclient==2.1.1
 networkx==3.4.2
-nibabel==5.3.2
-nltk==3.9.1
-notebook==6.5.7
-notebook_shim==0.2.4
-numba==0.60.0
-numba-cuda==0.2.0
-numexpr==2.10.2
 numpy==2.0.2
-nvidia-cublas-cu12==12.5.3.2
-nvidia-cuda-cupti-cu12==12.5.82
-nvidia-cuda-nvcc-cu12==12.5.82
-nvidia-cuda-nvrtc-cu12==12.5.82
-nvidia-cuda-runtime-cu12==12.5.82
-nvidia-cudnn-cu12==9.3.0.75
-nvidia-cufft-cu12==11.2.3.61
-nvidia-curand-cu12==10.3.6.82
-nvidia-cusolver-cu12==11.6.3.83
-nvidia-cusparse-cu12==12.5.1.3
-nvidia-cusparselt-cu12==0.6.2
-nvidia-ml-py==12.570.86
-nvidia-nccl-cu12==2.21.5
-nvidia-nvcomp-cu12==4.2.0.11
-nvidia-nvjitlink-cu12==12.5.82
-nvidia-nvtx-cu12==12.4.127
-nvtx==0.2.11
-nx-cugraph-cu12 @ https://pypi.nvidia.com/nx-cugraph-cu12/nx_cugraph_cu12-25.2.0-py3-none-any.whl
-oauth2client==4.1.3
-oauthlib==3.2.2
-openai==1.76.0
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-openpyxl==3.1.5
-opentelemetry-api==1.16.0
-opentelemetry-sdk==1.16.0
-opentelemetry-semantic-conventions==0.37b0
-opt_einsum==3.4.0
-optax==0.2.4
-optree==0.15.0
-orbax-checkpoint==0.11.12
-orjson==3.10.17
-osqp==1.0.3
-packaging==24.2
 pandas==2.2.2
-pandas-datareader==0.10.0
-pandas-gbq==0.28.0
-pandas-stubs==2.2.2.240909
-pandocfilters==1.5.1
-pyspark==3.5.5
-pytensor==2.30.3
-pytest==8.3.5
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-requirements-parser==0.9.0
-rich==13.9.4
-rmm-cu12==25.2.0
-roman-numerals-py==3.1.0
-rpds-py==0.24.0
-rpy2==3.5.17
-rsa==4.9.1
-safetensors==0.5.3
-scikit-image==0.25.2
+plotnine==0.14.5
 scikit-learn==1.6.1
 scipy==1.15.2
-scooby==0.10.1
-scs==3.2.7.post2
 seaborn==0.13.2
-SecretStorage==3.3.3
-Send2Trash==1.8.3
-sentence-transformers==3.4.1
-sentencepiece==0.2.0
-sentry-sdk==2.27.0
-setproctitle==1.3.6
 shap==0.47.2
-shapely==2.1.0
-shellingham==1.5.4
-simple-parsing==0.1.7
-simplejson==3.20.1
-simsimd==6.2.1
-six==1.17.0
-sklearn-compat==0.1.3
-sklearn-pandas==2.2.0
-slicer==0.0.8
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soundfile==0.13.1
-soupsieve==2.7
-soxr==0.5.0.post1
-spacy==3.8.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-spanner-graph-notebook==1.1.6
-Sphinx==8.2.3
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-SQLAlchemy==2.0.40
-sqlglot==25.20.2
-sqlparse==0.5.3
-srsly==2.5.1
-stanio==0.5.1
 statsmodels==0.14.4
-stringzilla==3.12.5
-sympy==1.13.1
-tables==3.10.2
-tabulate==0.9.0
-tbb==2022.1.0
-tblib==3.1.0
-tcmlib==1.3.0
-tenacity==9.1.2
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
 tensorflow==2.18.0
-tensorflow-datasets==4.9.8
-tensorflow-hub==0.16.1
-tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-metadata==1.17.1
-tensorflow-probability==0.25.0
-tensorflow-text==2.18.1
-tensorflow_decision_forests==1.11.0
-tensorstore==0.1.74
-termcolor==3.0.1
-terminado==0.18.1
-text-unidecode==1.3
-textblob==0.19.0
-tf-slim==1.1.0
-tf_keras==2.18.0
-thinc==8.3.6
-threadpoolctl==3.6.0
-tifffile==2025.3.30
-timm==1.0.15
-tinycss2==1.4.0
-tokenizers==0.21.1
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.7.1
-traittypes==0.2.1
-transformers==4.51.3
-treelite==4.4.1
-treescope==0.1.9
-triton==3.2.0
-tweepy==4.15.0
-typeguard==4.4.2
-typer==0.15.3
-types-pytz==2025.2.0.20250326
-types-setuptools==80.0.0.20250429
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
-tzlocal==5.3.1
-uc-micro-py==1.0.3
-ucx-py-cu12==0.42.0
-ucxx-cu12==0.42.0
-umap-learn==0.5.7
-umf==0.10.0
-uritemplate==4.1.1
-urllib3==2.4.0
-vega-datasets==0.9.0
-wadllib==1.3.6
-wandb==0.19.10
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-widgetsnbextension==3.6.10
-wordcloud==1.9.4
-wrapt==1.17.2
-wurlitzer==3.1.1
-xarray==2025.3.1
-xarray-einstats==0.8.0
 xgboost==2.1.4
-xlrd==2.0.1
-xyzservices==2025.4.0
-yarl==1.20.0
-ydf==0.11.0
-yellowbrick==1.5
-yfinance==0.2.57
-zict==3.0.0
-zipp==3.21.0
-zstandard==0.23.0
