--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,14 @@ matplotlib==3.10.0
 numpy==2.0.2
 pandas==2.2.2
 plotnine==0.14.5
+requests
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 shap==0.47.2
 statsmodels==0.14.4
 streamlit
+tempfile
 tensorflow==2.18.0
 tqdm==4.67.1
 xgboost==2.1.4
